# code-contex

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-07-14-ai-usage-tray-widget.md  2026-07-15-codexbar-panel.md  2026-07-15-real-claude-limits-and-provider-abstraction.md  2026-07-15-usage-accuracy-fixes.md  2026-07-16-statusline-v2.md
docs/superpowers/specs/: 2026-07-14-ai-usage-tray-widget-design.md  2026-07-15-codexbar-panel-design.md  2026-07-15-menu-redesign-design.md  2026-07-16-local-contest-mode-design.md  2026-07-16-statusline-integration-design.md  2026-07-16-statusline-v2-design.md  2026-07-16-usage-history-trends-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  claude_oauth.rs  claude_settings.rs  dashboard.rs  history.rs  limit_alerts.rs  limits.rs  main.rs  menu_format.rs  model.rs  preferences.rs  price_fetch.rs  pricing.rs  pricing_data.json  provider.rs  records.rs  statusline.rs  statusline_format.rs  summary.rs  tray.rs  windows.rs
src-tauri/src/parsers/: claude_code.rs  opencode.rs
src-tauri/tests/fixtures/: claude_code_sample.jsonl
ui/: panel.html
